Fixed event.html for spacing matters

--- a/kickIn_26/src/main/webapp/css/event.css
+++ b/kickIn_26/src/main/webapp/css/event.css
@@ -1,3 +1,7 @@
+h1{
+    padding-right: 0.5rem;
+}
+
 h2{
     text-align : center;
     font-size: 50px;
@@ -7,7 +11,7 @@ h2{
 .glyphicon {
     font-size:20px;
     color:#00CC33;
-    padding-left: 20px;
+    padding-right: 0.5rem;
 }
 
 body{
